--- a/Учебник от Яндекса/Введение.md
+++ b/Учебник от Яндекса/Введение.md
@@ -16,8 +16,8 @@
 Описанные выше задачи являются примерами задач **обучения с учителем (supervised learning)**, т.к. правильные ответы для каждого объекта обучающей выборки заранее известны. Такие задачи делятся на следующие виды в зависимости от того, каким может быть множество $y$ всех возможных ответов / таргетов:
 
 1. $\mathbb{Y} = \mathbb{R}$ или $\mathbb{Y} = \mathbb{R}^M$ - **регрессия**. Например, предсказание спроса на конкретный товар в конкретный день;
-2. $\mathbb{Y} = {0, 1}$ - **бинарная классификация**. Например, мы можем предсказать, вернёт ли клиент кредит в установленный срок или нет;
-3. $\mathbb{Y} = {1, ..., K}$ - **многоклассовая классификация с пересекающимися классами (multilabel classification)**. Например, задача автоматического проставления тегов для ресторанов (ресторан может иметь одновременно несколько тегов).
+2. $\mathbb{Y} = \{0, 1\}$ - **бинарная классификация**. Например, мы можем предсказать, вернёт ли клиент кредит в установленный срок или нет;
+3. $\mathbb{Y} = \{1, ..., K\}$ - **многоклассовая классификация с пересекающимися классами (multilabel classification)**. Например, задача автоматического проставления тегов для ресторанов (ресторан может иметь одновременно несколько тегов).
 4. $\mathbb{Y}$ - конечное упорядоченное множество - **ранжирование**. Например, задача ранжирования поисковой выдачи, где необходимо отсортировать документы по релевантности запросу. При этом объекты сравниваются между собой, а абсолютное значение оценки релевантности не имеет значения.
 
 Ответ может быть и более сложным. Так, в задаче сегментации изображения требуется для каждого пикселя предсказать, к какому объекту или типу объектов он относится, а в задаче машинного перевода мы должны сгенерировать предложение (или целый текст), являющееся переводом исходного. Интерес представляют и задачи **порождения новых объектов**, то есть генерации правдоподобных объектов, из ничего или на основе уже существующих. С помощью такой модели также можно научиться увеличивать разрешение изображения и применять любимые всеми маски в Snapchat или Instagram.
