--- a/Учебник от Яндекса/Введение.md
+++ b/Учебник от Яндекса/Введение.md
@@ -28,4 +28,8 @@
 
 ### Критерии качества
 
+По обучающей выборке мы хотим построить модель, предсказания которой достаточно хороши. От цели зависит и выбор **метрик качества**. В каждом конкретном случае может возникать целая иерархия метрик.
 
+1. Самый верхний уровень - это **бизнес-метрики**, например, будущий доход сервиса. Их трудно измерить в моменте, они сложным образом зависят от совокупности всех наших училий, даже возможно не связанных с МО.
+2. **Онлайн метрики** - это характеристики работающей системы, с помощью которых мы пытаемся оценить, что будет с бизнес-метриками. Например, медианная длина сессии в онлайн-игре. Можно предположить, что пользователь, который долго сидит в игре 
+3. 
