--- a/Учебник от Яндекса/Введение.md
+++ b/Учебник от Яндекса/Введение.md
@@ -83,4 +83,6 @@
 
 Для примера возьмем задачу предсказания цены квартиры. В качестве класса моделей выберем константные функции $f(x) = c$ (т.е. будет для всех квартир предсказывать одно и то же значение цены). Посколько значение не зависит от $x$, нам неважно в каком виде было получено признаковое описание. Будем оценивать метрику качества - **среднее абсолютное отклонение (mean absolute error) - $MAE$**.
 
-$MAE(f, X, y) = L(f, X, y) = \cfrac{1}{N}$
+$MAE(f, X, y) = L(f, X, y) = \cfrac{1}{N} \sum\limits_{i=1}^N |f(x_i) - y_i|$ $\rightarrow {\underset{f}{min}}$
+
+
