--- a/Учебник от Яндекса/Введение.md
+++ b/Учебник от Яндекса/Введение.md
@@ -83,6 +83,20 @@
 
 Для примера возьмем задачу предсказания цены квартиры. В качестве класса моделей выберем константные функции $f(x) = c$ (т.е. будет для всех квартир предсказывать одно и то же значение цены). Посколько значение не зависит от $x$, нам неважно в каком виде было получено признаковое описание. Будем оценивать метрику качества - **среднее абсолютное отклонение (mean absolute error) - $MAE$**.
 
-$MAE(f, X, y) = L(f, X, y) = \cfrac{1}{N} \sum\limits_{i=1}^N |f(x_i) - y_i|$ $\rightarrow {\underset{f}{min}}$
+Оптимальной функцией с наименьшим MAE является медианная функция - $f(x) = median(y)$. Для MSE же, например, такой функцией будет $f(x) = \bar{y}$.
 
+Кроме выбора модели важен также выбор алгоритма обучения. **Алгоритм обучения** — это процедура, которая превращает обучающую выборку в обученную модель. В примере выше для константной модели мы в качестве алгоритма обучения использовали поиск нуля градиента.
 
+Если мы хотим подобрать для бинарной классификации в качестве разделяющей гиперплоскости прямую с функцией $y = \omega_1 \ cdot x + \omega_0$, то числа $\omega_1$, $\omega_0$ будут тогда являться **настраиваемыми (обучаемыми) параметрами** модели, и именно их будет по выборке восстанавливать алгоритм обучения. Но есть проблема: метрика accuracy не дифференцируема. Поэтому мы должны подобрать другую дифференцируемую функцию, минимизация которой будет более или менее соответствовать оптимизации вероятности. Такая функция называется **функцией потерь, лоссом** (от слова loss) или **лосс-функцией**.
+
+### Выбор модели, переобучение
+
+Важно понимать, какая у построенной модели **обобщающая способность**, то есть насколько она способна выучить общие закономерности, присущие не только обучающей выборке, и давать адекватные предсказания на новых данных. Обычно поступают обычно так: делят выборку с данными на две части - **обучающую выборку** и **тестовую выборку** (train и test). Обучающую выборку используют для собственно обучения модели, а метрики считают на тестовой. Такой подход позволяет отделить модели, которые просто удачно подстроились к обучающим данным, от моделей, в которых произошла **генерализация** (generalization), то есть от таких, которые на самом деле кое-что поняли о том, как устроены данные, и могут выдавать полезные предсказания для объектов, которых не видели.
+
+Алгоритм, избыточно подстроившийся под данные, называют **переобученным**.
+
+С увеличением сложности модели ошибка на обучающей выборке падает. Во многих задачах очень сложная модель будет работать примерно так же, как модель, «просто запомнившая всю обучающую выборку», но с генерализацией всё будет плохо: ведь выученные закономерности будут слишком специфическими, подогнанными под то, что происходит на обучающей выборке.
+
+### После обучения
+
+В момент, когда подобраны все обучаемые параметры и гиперпараметры модели, работа специалиста по машинному обучению не заканчивается. Процесс выкатки в продакшен называется словом **деплой** или **деплоймент** (от deploy). После деплоя можно посчитать онлайн-метрики. Также имеет смысл провести **АБ-тестирование**, то есть сравнение с предыдущей версией модели на случайно выбранных подмножествах пользователей или сессий. После деплоймента модели важно продолжать дообучать или переобучать её при поступлении новых данных, а также мониторить качество. Мы уже обсуждали data drift, но бывает также и **concept drift** — изменение зависимости между признаками и таргетом. Например, если вы делаете музыкальные рекомендации, вам нужно будет учитывать и появление новых треков, и изменение вкусов аудитории.
